[clang-tidy] Add bugprone-macro-condition check
Warns about inconsistent macro usage in preprocessor conditions.

  #define USE_FOO 0
  #ifdef USE_FOO
  // ...no preprocessor directives testing the value of USE_FOO
  #endif

Here USE_FOO is defined to a value (and furthermore defined to
evaluate to false) but the preprocessor condition only checks for
the macro being defined.

Fixes #27438

--- a/clang-tools-extra/clang-tidy/bugprone/CMakeLists.txt
+++ b/clang-tools-extra/clang-tidy/bugprone/CMakeLists.txt
@@ -34,6 +34,7 @@ add_clang_library(clangTidyBugproneModule
   InfiniteLoopCheck.cpp
   IntegerDivisionCheck.cpp
   LambdaFunctionNameCheck.cpp
+  MacroConditionCheck.cpp
   MacroParenthesesCheck.cpp
   MacroRepeatedSideEffectsCheck.cpp
   MisplacedOperatorInStrlenInAllocCheck.cpp
