Extract Class PPTreePrinter
Expose visitDirectives for level control in derived class.

--- a/clang-tools-extra/clang-tidy/utils/CMakeLists.txt
+++ b/clang-tools-extra/clang-tidy/utils/CMakeLists.txt
@@ -24,6 +24,7 @@ add_clang_library(clangTidyUtils
   OptionsUtils.cpp
   PPTree.cpp
   PPTreeMatchers.cpp
+  PPTreeVisitor.cpp
   RenamerClangTidyCheck.cpp
   TransformerClangTidyCheck.cpp
   TypeTraits.cpp
